"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

item.c: set_item_values - only resort items based on name if the name
   has changed.  This fixes a problem with items moving around in the 
   inventory if you lock/apply/unapply/unlock them.  MSW 2001/03/23

------------------------------------------------------------------------------
Changes for 0.97.0:

MSW 2001/03/18
Change so that containers on the ground still keep proper contents even if the
map space itself changes (spells or other objects going onto the space).  This
is done by using the cpl.container pointer and when getting an updated map
space, seeing if one of the map space object tags match that.
commands.c: update the cpl.container tags when opening/closing containers.
item.c: Have locate_object see if the container matches the tag.  Don't have
    remove_item remove the object contents of other attributes if it is the
    container, but still remove it from the list it is on.
item.h: remove function prototypes - these are in proto.h

MSW 2001/03/13:
png.c: New png -> X11 (or gdk) creation routines that are much faster.  This
   should make a noticable difference in performance.  Note that the X11
   and gdk implementations are very different now - the gdk implementation
   lets the gdk library do most of the work.
gx11.c: remove some dead code, add call to gdk_rgb_init() if using
   png images - needed by new png loader.
x11.c: Add call to init_pngx_loader if running in png mode.  Also pass colormap
   by pointer so png_to_xpixmap can modify it.
xutil.c: pass colormap by pointer to init_pngx_loader (same reason as above)

MSW 2001/03/06:
Makefile.in: Add DMALLOC_LIB definition instead of it going in with the
    the default libraries.  cfsndserv will now get properly linked with
    dmalloc.
configure.in, configure: add --disable-sound option, and make relevant
    changes to use that option (which basically amounts to not checking